--- a/index.html
+++ b/index.html
@@ -3,51 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lakwa Hospital Obra – लकवा अस्पताल, डॉ. चंदन कुमार | Obra Aurangabad Bihar</title>
+  <title>Lakwa Hospital Obra – लकवा अस्पताल, डॉ. चंदन कुमार</title>
 
-  <!-- Basic SEO -->
   <meta name="description"
-        content="Lakwa Hospital Obra, Dr. Chandan Kumar – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि के इलाज हेतु अनुभवी डॉक्टर की देखरेख में आधुनिक उपकरणों से उपचार।" />
+        content="Lakwa Hospital Obra, Dr. Chandan Kumar – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना एवं न्यूरो सम्बंधित रोगों की विशेष देखरेख 24 घंटे उपलब्ध।" />
   <meta name="keywords"
         content="Lakwa Hospital Obra, लकवा अस्पताल ओबरा, Dr Chandan Kumar Obra, paralysis treatment Obra, neuro hospital Obra, Aurangabad Bihar" />
   <meta name="robots" content="index, follow" />
 
-  <!-- Local Business / MedicalClinic JSON-LD -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MedicalClinic",
-    "name": "Lakwa Hospital - Dr. Chandan Kumar",
-    "image": "https://example.com/doctorphoto.png",
-    "logo": "https://example.com/doctorphoto.png",
-    "url": "https://example.com/",
-    "telephone": "+91-9771737437",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "अशोक कॉलोनी के ठीक सामने, NH-139, नपतानियां पानी टंकी",
-      "addressLocality": "Obra",
-      "addressRegion": "Bihar",
-      "postalCode": "824124",
-      "addressCountry": "IN"
-    },
-    "geo": {
-      "@type": "GeoCoordinates",
-      "latitude": 24.74,
-      "longitude": 84.38
-    },
-    "openingHoursSpecification": [{
-      "@type": "OpeningHoursSpecification",
-      "dayOfWeek": [
-        "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"
-      ],
-      "opens": "09:00",
-      "closes": "23:59"
-    }],
-    "medicalSpecialty": "Neurology"
-  }
-  </script>
-
-  <!-- Google Font -->
+  <!-- Font -->
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" />
 
@@ -59,42 +23,44 @@
 </head>
 <body>
 
-  <!-- TOP BAR -->
+  <!-- TOP BLACK STRIP -->
   <div class="top-bar">
-    <div>लखवा अस्पताल, ओबरा – औरंगाबाद, बिहार</div>
+    <div>लकवा अस्पताल, ओबरा – औरंगाबाद, बिहार</div>
     <div>आपातकालीन सहायता: <a href="tel:+919771737437" style="color:#fff;text-decoration:underline;">+91 97717 37437</a></div>
   </div>
 
-  <!-- HERO / HEADER -->
-  <header class="hero">
-    <div class="header-left">
-      <div style="display:flex;align-items:center;justify-content:center;gap:12px;margin-bottom:18px;">
-        <div class="logo-mark">LH</div>
-        <div class="logo-text">
-          <span class="logo-title-en">Lakwa Hospital Obra</span>
-          <span class="logo-title-hi">लकवा अस्पताल : Obra, Bihar</span>
-        </div>
-      </div>
-
+  <!-- MAIN NAV BAR -->
+  <nav class="main-nav">
+    <div class="main-nav-logo">Lakwa Hospital Obra</div>
+    <div class="main-nav-links">
+      <a href="#facility">Services</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#map">Location</a>
+      <a href="#about-us">About Us</a>
+      <a href="#contact-us">Contact Us</a>
+      <a href="#privacy-policy">Privacy Policy</a>
+      <a href="#disclaimer">Disclaimer</a>
     </div>
+  </nav>
 
-    <!-- Doctor photo -->
+  <!-- HERO -->
+  <header class="hero">
     <img src="doctorphoto.png"
          alt="Dr. Chandan Kumar – Lakwa Hospital Obra" />
 
     <div class="hospital-name">लकवा अस्पताल</div>
     <div class="doctor-name">डॉ. चंदन कुमार</div>
 
-    <p style="max-width:650px;margin:10px auto 0;font-size:14px;">
+    <p>
       M.B.E.H (Patna) – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना एवं न्यूरो सम्बंधित रोगों की विशेष देखरेख 24 घंटे उपलब्ध।
     </p>
-
-    <p style="max-width:650px;margin:6px auto 0;font-size:14px;">
-      लकवा तथा नसों से सम्बंधित रोगों के लिए विशेष उपचार उपलब्ध, आधुनिक उपकरण, साफ-सुथरा वातानुकूलित कक्ष, मरीज तथा साथ-आने वाले परिजनों के लिए सुविधाजनक व्यवस्था।
+    <p>
+      लकवा तथा नसों से सम्बंधित रोगों के लिए विशेष उपचार उपलब्ध, आधुनिक उपकरण, साफ-सुथरा वातानुकूलित कक्ष,
+      मरीज तथा साथ-आने वाले परिजनों के लिए सुविधाजनक व्यवस्था।
     </p>
 
     <div style="margin-top:10px;font-size:13px;">
-      ✔ विशेष लकवा उपचार  &nbsp;&nbsp; ✔ अनुभवी डॉक्टर  &nbsp;&nbsp; ✔ आपातकालीन सुविधाएँ
+      ✔ विशेष लकवा उपचार &nbsp;&nbsp; ✔ अनुभवी डॉक्टर &nbsp;&nbsp; ✔ आपातकालीन सुविधाएँ
     </div>
 
     <div style="margin-top:16px;">
@@ -105,7 +71,7 @@
 
   <main>
 
-    <!-- BLUE STATS -->
+    <!-- STATS -->
     <section class="card stats-card">
       <div class="stat-box">
         <div class="stat-number">10+</div>
@@ -121,102 +87,61 @@
       </div>
     </section>
 
-    <!-- हमारी चिकित्सा एवं सुविधाएं (3 PHOTO FRAME) -->
+    <!-- SERVICES / FACILITIES (3 photo strip) -->
     <section class="card" id="facility">
       <h2 class="section-title">हमारी चिकित्सा एवं सुविधाएं</h2>
-      <p>
-        अत्याधुनिक सुविधाएं, योग्य डॉक्टर, और तेज़ उपचार हेतु साफ-सुथरा वातानुकूलित उपचार कक्ष।
-      </p>
+      <p>अत्याधुनिक सुविधाएं, योग्य डॉक्टर, और तेज़ उपचार हेतु साफ-सुथरा वातानुकूलित उपचार कक्ष।</p>
 
       <div class="facility-photos">
-        <!-- 1 – बाहरी प्रवेश द्वार -->
         <div class="facility-item">
-          <img src="IMG_20251201_114319.jpg"
-               alt="अस्पताल का बाहरी प्रवेश द्वार" />
+          <img src="IMG_20251201_114319.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार" />
           <div class="facility-caption">अस्पताल का बाहरी प्रवेश द्वार</div>
         </div>
-
-        <!-- 2 – दवाइयों की दुकान / स्टोर -->
         <div class="facility-item">
-          <img src="IMG_20251201_114316.jpg"
-               alt="दवाइयों की दुकान एवं स्टोर" />
+          <img src="IMG_20251201_114316.jpg" alt="दवाइयों की दुकान एवं स्टोर" />
           <div class="facility-caption">दवाइयों की दुकान एवं स्टोर</div>
         </div>
-
-        <!-- 3 – अंदर का उपचार कक्ष -->
         <div class="facility-item">
-          <img src="IMG_20251201_114258.jpg"
-               alt="अंदर का उपचार कक्ष" />
+          <img src="IMG_20251201_114258.jpg" alt="अंदर का उपचार कक्ष" />
           <div class="facility-caption">अंदर का उपचार कक्ष</div>
         </div>
       </div>
     </section>
 
-    <!-- CONTACT + APPOINTMENT + MAP -->
-    <section class="card" id="contact-us">
-      <h2 class="section-title">Contact Us / ऑनलाइन अपॉइंटमेंट</h2>
-
-      <div style="display:flex;flex-wrap:wrap;gap:18px;margin-top:10px;">
-        <!-- LEFT: Contact info + form -->
-        <div style="flex:1 1 260px;min-width:260px;">
-          <p>
-            पता: अशोक कॉलोनी के ठीक सामने, NH-139, नपतानियां पानी टंकी,<br />
-            ओबरा, औरंगाबाद, बिहार – 824124
-          </p>
-          <p style="margin-top:8px;">
-            मोबाइल: <a href="tel:+919771737437">+91 97717 37437</a>,
-            <a href="tel:+918210606911">+91 82106 06911</a><br />
-            कॉल या फॉर्म भरने पर आपसे संपर्क किया जाएगा।
-          </p>
-
-          <form id="appointmentForm" style="margin-top:12px;">
-            <label for="name">👤 रोगी का नाम*</label><br />
-            <input id="name" name="name" type="text"
-                   placeholder="रोगी का नाम" required
-                   style="width:100%;padding:8px;border-radius:8px;border:1px solid #ccc;margin:4px 0 10px;" />
-
-            <label for="phone">📞 मोबाइल नंबर*</label><br />
-            <input id="phone" name="phone" type="tel"
-                   placeholder="10 अंकों का मोबाइल नंबर" required
-                   style="width:100%;padding:8px;border-radius:8px;border:1px solid #ccc;margin:4px 0 10px;" />
-
-            <label for="date">📅 पसंदीदा तिथि</label><br />
-            <input id="date" name="date" type="date"
-                   style="width:100%;padding:8px;border-radius:8px;border:1px solid #ccc;margin:4px 0 10px;" />
-
-            <label for="problem">📝 समस्या</label><br />
-            <textarea id="problem" name="problem"
-                      placeholder="संक्षेप में समस्या लिखें (जैसे – लकवा, नसों की कमजोरी, दर्द आदि)"
-                      rows="3"
-                      style="width:100%;padding:8px;border-radius:8px;border:1px solid #ccc;margin:4px 0 10px;"></textarea>
-
-            <button type="submit" class="btn-primary" style="width:100%;">
-              📩 अपॉइंटमेंट भेजें
-            </button>
-
-            <p style="margin-top:6px;font-size:12px;color:#666;">
-              फॉर्म भरने के बाद आपका कॉल वापस किया जाएगा और समय की पुष्टि की जाएगी।
-            </p>
-          </form>
+    <!-- HOSPITAL PHOTO GALLERY -->
+    <section class="card" id="gallery">
+      <h2 class="section-title">अस्पताल फोटो गैलरी</h2>
+      <div class="gallery-grid">
+        <div class="gallery-item">
+          <img src="IMG_20251201_114319.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार" />
+          <div class="gallery-caption">अस्पताल का बाहरी प्रवेश द्वार</div>
         </div>
-
-        <!-- RIGHT: Google Map -->
-        <div style="flex:1 1 260px;min-width:260px;">
-          <h3 style="font-size:16px;margin-bottom:6px;">हमारा स्थान (Google Map)</h3>
-          <iframe
-            src="https://www.google.com/maps?q=Obra%20Aurangabad%20Bihar&output=embed"
-            width="100%" height="260" style="border:0;border-radius:14px;"
-            allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
-          <p style="margin-top:6px;font-size:13px;">
-            पता: अशोक कॉलोनी के ठीक सामने, NH-139, ओबरा, औरंगाबाद, बिहार – 824124
-          </p>
+        <div class="gallery-item">
+          <img src="IMG_20251201_114316.jpg" alt="दवाइयों की दुकान एवं स्टोर" />
+          <div class="gallery-caption">दवाइयों की दुकान एवं स्टोर</div>
+        </div>
+        <div class="gallery-item">
+          <img src="IMG_20251201_114258.jpg" alt="अंदर का उपचार कक्ष" />
+          <div class="gallery-caption">अंदर का उपचार कक्ष</div>
         </div>
       </div>
     </section>
 
-    <!-- ABOUT US -->
+    <!-- MAP (Gallery ke niche) -->
+    <section class="card" id="map">
+      <h2 class="section-title">हमारा स्थान (Google Map)</h2>
+      <p>अशोक कॉलोनी के ठीक सामने, NH-139, नपतानियां पानी टंकी, ओबरा, औरंगाबाद, बिहार – 824124</p>
+      <iframe
+        class="map-frame"
+        src="https://www.google.com/maps?q=Obra%20Aurangabad%20Bihar&output=embed"
+        height="260"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </section>
+
+    <!-- ABOUT US (map ke niche) -->
     <section class="card" id="about-us">
       <h2 class="section-title">About Us – हमारा अस्पताल</h2>
       <p>
@@ -224,10 +149,9 @@
         अनुभवी डॉक्टर की देखरेख में आधुनिक उपकरणों से उपचार प्रदान करता है।
       </p>
       <p style="margin-top:6px;">
-        हमारे यहाँ मरीजों तथा साथ आने वाले परिजनों के लिए साफ-सुथरा, व्यवस्थित एवं वातानुकूलित इंतज़ाम किया गया है।
+        मरीजों तथा साथ आने वाले परिजनों के लिए साफ-सुथरा, व्यवस्थित एवं वातानुकूलित इंतज़ाम किया गया है, ताकि इलाज के साथ-साथ आराम भी मिल सके।
       </p>
-
-      <div style="margin-top:10px;font-size:14px;">
+      <div style="margin-top:8px;font-size:14px;">
         ✔ लकवा एवं नसों का विशेष उपचार<br />
         ✔ आधुनिक उपकरण एवं सुविधाएं<br />
         ✔ आपातकालीन सेवा 24×7<br />
@@ -235,49 +159,71 @@
       </div>
     </section>
 
-    <!-- PHOTO GALLERY (नीचे वाली) -->
-    <section class="card" id="gallery">
-      <h2 class="section-title">अस्पताल फोटो गैलरी</h2>
+    <!-- CONTACT (About ke niche) -->
+    <section class="card" id="contact-us">
+      <h2 class="section-title">Contact Us / ऑनलाइन अपॉइंटमेंट</h2>
+      <p>
+        पता: अशोक कॉलोनी के ठीक सामने, NH-139, नपतानियां पानी टंकी, ओबरा, औरंगाबाद, बिहार – 824124<br />
+        मोबाइल:
+        <a href="tel:+919771737437">+91 97717 37437</a>,
+        <a href="tel:+918210606911">+91 82106 06911</a><br />
+        कॉल या फॉर्म भरने पर आपका कॉल वापस किया जाएगा।
+      </p>
 
-      <div class="gallery-grid">
-        <!-- 1 – बाहरी प्रवेश द्वार -->
-        <div class="gallery-item">
-          <img src="IMG_20251201_114319.jpg"
-               alt="अस्पताल का बाहरी प्रवेश द्वार" />
-          <div class="gallery-caption">अस्पताल का बाहरी प्रवेश द्वार</div>
-        </div>
+      <form id="appointmentForm" style="margin-top:12px;">
+        <label for="name">👤 रोगी का नाम*</label><br />
+        <input id="name" name="name" type="text" placeholder="रोगी का नाम" required />
 
-        <!-- 2 – दवाइयों की दुकान -->
-        <div class="gallery-item">
-          <img src="IMG_20251201_114316.jpg"
-               alt="दवाइयों की दुकान एवं स्टोर" />
-          <div class="gallery-caption">दवाइयों की दुकान एवं स्टोर</div>
-        </div>
+        <label for="phone">📞 मोबाइल नंबर*</label><br />
+        <input id="phone" name="phone" type="tel" placeholder="10 अंकों का मोबाइल नंबर" required />
 
-        <!-- 3 – अंदर का उपचार कक्ष -->
-        <div class="gallery-item">
-          <img src="IMG_20251201_114258.jpg"
-               alt="अंदर का उपचार कक्ष" />
-          <div class="gallery-caption">अंदर का उपचार कक्ष</div>
-        </div>
-      </div>
+        <label for="date">📅 पसंदीदा तिथि</label><br />
+        <input id="date" name="date" type="date" />
+
+        <label for="problem">📝 समस्या</label><br />
+        <textarea id="problem" name="problem" rows="3"
+          placeholder="संक्षेप में समस्या लिखें (जैसे – लकवा, नसों की कमजोरी, दर्द आदि)"></textarea>
+
+        <button type="submit" class="btn-primary" style="width:100%;margin-top:6px;">
+          📩 अपॉइंटमेंट भेजें
+        </button>
+
+        <p style="margin-top:6px;font-size:12px;color:#666;">
+          फॉर्म भरने के बाद आपका कॉल वापस किया जाएगा और समय की पुष्टि की जाएगी।
+        </p>
+      </form>
     </section>
 
     <!-- PRIVACY POLICY -->
     <section class="card" id="privacy-policy">
       <h2 class="section-title">Privacy Policy (गोपनीयता नीति)</h2>
       <p>
-        इस वेबसाइट पर प्राप्त जानकारी केवल अपॉइंटमेंट एवं स्वास्थ्य सम्बंधित सलाह हेतु प्रयोग की जाती है।
+        इस वेबसाइट पर प्राप्त जानकारी केवल अपॉइंटमेंट एवं स्वास्थ्य सम्बन्धित सलाह हेतु प्रयुक्त की जाती है।
         आपकी अनुमति के बिना आपकी व्यक्तिगत जानकारी किसी तीसरे पक्ष के साथ साझा नहीं की जाएगी।
+      </p>
+    </section>
+
+    <!-- DISCLAIMER -->
+    <section class="card" id="disclaimer">
+      <h2 class="section-title">Disclaimer (अस्वीकरण)</h2>
+      <p>
+        इस वेबसाइट पर दी गई जानकारी सामान्य सूचना के उद्देश्य से है। किसी भी रोग के निदान या उपचार के लिए केवल
+        वेबसाइट पर दी गई जानकारी पर निर्भर न रहें, हमेशा डॉक्टर से सीधे परामर्श लें।
       </p>
     </section>
 
   </main>
 
-  <!-- FOOTER -->
+  <!-- FOOTER – BLACK -->
   <footer>
+    <div class="footer-links">
+      <a href="#about-us">About Us</a>
+      <a href="#contact-us">Contact Us</a>
+      <a href="#privacy-policy">Privacy Policy</a>
+      <a href="#disclaimer">Disclaimer</a>
+    </div>
     <p>© 2025 Lakwa Hospital, Obra Bihar</p>
-    <p>Designed &amp; Developed by <span>Prince Kumar</span></p>
+    <p>Designed &amp; Developed by Prince Kumar</p>
   </footer>
 
 </body>
