--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         content="Lakwa Hospital Obra, लकवा अस्पताल ओबरा, Dr Chandan Kumar Obra, paralysis treatment Obra, neuro hospital Obra, Aurangabad Bihar" />
   <meta name="robots" content="index, follow" />
 
-  <!-- Font -->
+  <!-- Google Font -->
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" />
 
@@ -25,17 +25,25 @@
 
   <!-- TOP BLACK STRIP -->
   <div class="top-bar">
-    <div>लकवा अस्पताल, ओबरा – औरंगाबाद, बिहार</div>
-    <div>आपातकालीन सहायता: <a href="tel:+919771737437" style="color:#fff;text-decoration:underline;">+91 97717 37437</a></div>
+    <div>Lakwa Hospital Obra – लकवा अस्पताल, ओबरा (औरंगाबाद, बिहार)</div>
+    <div>आपातकालीन सहायता: <a href="tel:+919771737437" class="top-bar-link">+91 97717 37437</a></div>
   </div>
 
-  <!-- MAIN NAV BAR -->
+  <!-- MAIN NAV (3D logo + hamburger) -->
   <nav class="main-nav">
-    <div class="main-nav-logo">Lakwa Hospital Obra</div>
-    <div class="main-nav-links">
+    <div class="main-nav-left">
+      <div class="logo-3d">LH</div>
+      <div class="main-nav-logo-text">Lakwa Hospital Obra</div>
+    </div>
+
+    <button class="nav-toggle" aria-label="Toggle menu" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+
+    <div class="main-nav-links" id="navLinks">
       <a href="#facility">Services</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#map">Location</a>
       <a href="#about-us">About Us</a>
       <a href="#contact-us">Contact Us</a>
       <a href="#privacy-policy">Privacy Policy</a>
@@ -59,11 +67,11 @@
       मरीज तथा साथ-आने वाले परिजनों के लिए सुविधाजनक व्यवस्था।
     </p>
 
-    <div style="margin-top:10px;font-size:13px;">
+    <div class="hero-badges">
       ✔ विशेष लकवा उपचार &nbsp;&nbsp; ✔ अनुभवी डॉक्टर &nbsp;&nbsp; ✔ आपातकालीन सुविधाएँ
     </div>
 
-    <div style="margin-top:16px;">
+    <div class="hero-actions">
       <button class="btn-primary" onclick="callNow()">📞 अभी कॉल करें</button>
       <button class="btn-outline" onclick="scrollToAppointment()">📅 ऑनलाइन अपॉइंटमेंट बुक करें</button>
     </div>
@@ -127,39 +135,7 @@
       </div>
     </section>
 
-    <!-- MAP (Gallery ke niche) -->
-    <section class="card" id="map">
-      <h2 class="section-title">हमारा स्थान (Google Map)</h2>
-      <p>अशोक कॉलोनी के ठीक सामने, NH-139, नपतानियां पानी टंकी, ओबरा, औरंगाबाद, बिहार – 824124</p>
-      <iframe
-        class="map-frame"
-        src="https://www.google.com/maps?q=Obra%20Aurangabad%20Bihar&output=embed"
-        height="260"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
-    </section>
-
-    <!-- ABOUT US (map ke niche) -->
-    <section class="card" id="about-us">
-      <h2 class="section-title">About Us – हमारा अस्पताल</h2>
-      <p>
-        हमारा अस्पताल लकवा (पैरालिसिस), नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि के इलाज हेतु
-        अनुभवी डॉक्टर की देखरेख में आधुनिक उपकरणों से उपचार प्रदान करता है।
-      </p>
-      <p style="margin-top:6px;">
-        मरीजों तथा साथ आने वाले परिजनों के लिए साफ-सुथरा, व्यवस्थित एवं वातानुकूलित इंतज़ाम किया गया है, ताकि इलाज के साथ-साथ आराम भी मिल सके।
-      </p>
-      <div style="margin-top:8px;font-size:14px;">
-        ✔ लकवा एवं नसों का विशेष उपचार<br />
-        ✔ आधुनिक उपकरण एवं सुविधाएं<br />
-        ✔ आपातकालीन सेवा 24×7<br />
-        ✔ प्रशिक्षित एवं अनुभवी स्टाफ
-      </div>
-    </section>
-
-    <!-- CONTACT (About ke niche) -->
+    <!-- CONTACT (About se upar) -->
     <section class="card" id="contact-us">
       <h2 class="section-title">Contact Us / ऑनलाइन अपॉइंटमेंट</h2>
       <p>
@@ -188,10 +164,29 @@
           📩 अपॉइंटमेंट भेजें
         </button>
 
-        <p style="margin-top:6px;font-size:12px;color:#666;">
+        <p class="small-note">
           फॉर्म भरने के बाद आपका कॉल वापस किया जाएगा और समय की पुष्टि की जाएगी।
         </p>
       </form>
+    </section>
+
+    <!-- ABOUT US (Contact ke niche) -->
+    <section class="card" id="about-us">
+      <h2 class="section-title">About Us – हमारा अस्पताल</h2>
+      <p>
+        हमारा अस्पताल लकवा (पैरालिसिस), नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमज़ोरी, दर्द आदि के इलाज हेतु
+        अनुभवी डॉक्टर की देखरेख में आधुनिक उपकरणों से उपचार प्रदान करता है।
+      </p>
+      <p style="margin-top:6px;">
+        मरीजों तथा साथ आने वाले परिजनों के लिए साफ-सुथरा, व्यवस्थित एवं वातानुकूलित इंतज़ाम किया गया है,
+        ताकि इलाज के साथ-साथ आराम भी मिल सके।
+      </p>
+      <div class="about-points">
+        ✔ लकवा एवं नसों का विशेष उपचार<br />
+        ✔ आधुनिक उपकरण एवं सुविधाएं<br />
+        ✔ आपातकालीन सेवा 24×7<br />
+        ✔ प्रशिक्षित एवं अनुभवी स्टाफ
+      </div>
     </section>
 
     <!-- PRIVACY POLICY -->
@@ -210,6 +205,20 @@
         इस वेबसाइट पर दी गई जानकारी सामान्य सूचना के उद्देश्य से है। किसी भी रोग के निदान या उपचार के लिए केवल
         वेबसाइट पर दी गई जानकारी पर निर्भर न रहें, हमेशा डॉक्टर से सीधे परामर्श लें।
       </p>
+    </section>
+
+    <!-- MAP: footer ke bilkul upar -->
+    <section class="card" id="map">
+      <h2 class="section-title">हमारा स्थान (Google Map)</h2>
+      <p>अशोक कॉलोनी के ठीक सामने, NH-139, नपतानियां पानी टंकी, ओबरा, औरंगाबाद, बिहार – 824124</p>
+      <iframe
+        class="map-frame"
+        src="https://www.google.com/maps?q=Obra%20Aurangabad%20Bihar&output=embed"
+        height="260"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
     </section>
 
   </main>
